- bios/startup.S include/asmdefs.h: Disable MMU at beginning of boot. (RFB)

2012-11-25
- bios/processor.h bios/processor.S bios/vectors.S include/asmdefs.h:
  Enable instruction cache on 68030. (RFB)
- bios/serport.c: Insert required delays for SCC chip access. (RFB)

2012-11-27
- bios/bios.c bios/machine.c bios/machine.h: Code cleanup: rename
  machine_init() to fill_cookie_jar(). (RFB)
- bios/bios.c bios/machine.c bios/machine.h: Initialise Falcon bus control
  register (sets cpu speed to 16MHz). (RFB)

2012-11-28
- bios/serport.c bios/serport.h: Code cleanup: make functions static. (RFB)

2012-12-02
- bios/machine.c: Fix _SWI cookie to set high order bytes to zeros. (RFB)
- bios/machine.c: Set correct value in _FDC cookie. (RFB)
- bios/floppy.c include/asm.h: Use calibrated delay loop for floppy register
  access. (RFB)
- bios/floppy.c: Code cleanup: update comments re floppy track format. (RFB)

2012-12-03
- bios/blkdev.c bios/blkdev.h bios/floppy.c bios/floppy.h: Code cleanup:
  reorganise media change handling for floppies. (RFB)

2012-12-06
- bios/blkdev.c bios/blkdev.h bios/floppy.c: Protobt(): add new disk types
  and fix checksum & serial number. (RFB)

2012-12-10
- bios/blkdev.c bios/dma.h bios/floppy.c: Add support for HD floppy disks
  as indicated by _FDC cookie. (RFB)

2012-12-11
- bios/floppy.c bios/floppy.h bios/xbios.c: Flopfmt() now supports the
  skew array introduced in TOS 1.04. (RFB)
- bios/floppy.c: Flopfmt() now supports interleave. (RFB)

2012-12-13
- bios/acsi.c bios/blkdev.c bios/blkdev.h bios/disk.c bios/floppy.c
  bios/ide.c bios/xhdi.c: Code cleanup: #define physical sector size in
  one place. (RFB)
- bios/floppy.c: Fix compile errors when MACHINE_AMIGA is defined. (RFB)
- bios/disk.c bios/disk.h: Tidy up code format, variable names etc. (RFB)

2012-12-15
- bios/blkdev.c bios/blkdev.h bios/disk.c bios/floppy.c bios/xhdi.c:
  Code cleanup: replace magic number 2 with NUMFLOPPIES. (RFB)