@@ -164,16 +164,16 @@ static void bios_init(void)
     /* Initialize the BIOS memory management */
     bmem_init();        /* this must be done after screen_init() */
 
+    cookie_init();      /* sets a cookie jar */
+    fill_cookie_jar();  /* detect hardware features and fill the cookie jar */
+
     /* Set up the BIOS console output */
     linea_init();       /* initialize screen related line-a variables */
-    font_init();        /* initialize font ring */
+    font_init();        /* initialize font ring (requires cookie_akp) */
     font_set_default(); /* set default font */
     vt52_init();        /* initialize the vt52 console */
 
     /* Now kcprintf() will also send debug info to the screen */
-
-    cookie_init();      /* sets a cookie jar */
-    fill_cookie_jar();  /* detect hardware features and fill the cookie jar */
 
     /* misc. variables */
     dumpflg = -1;
