@@ -4182,3 +4182,7 @@ Start... early ages
 2012-12-15
 - bios/blkdev.c bios/blkdev.h bios/disk.c bios/floppy.c bios/xhdi.c:
   Code cleanup: replace magic number 2 with NUMFLOPPIES. (RFB)
+
+2012-12-18
+- bios/bios.c: Fixed wrong charset in multilanguage builds when the _AKP
+  cookie is initialized from the NVRAM (ex: wrong Spanish accents). (VRI)
